devtools/client/netmonitor/src/assets/styles/netmonitor.css
/* ... */
.
security
-
state
-
secure
{
background
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
security
-
state
-
secure
.
svg
)
;
}
.
security
-
state
-
weak
{
background
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
security
-
state
-
weak
.
svg
)
;
}
.
security
-
state
-
broken
{
background
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
security
-
state
-
broken
.
svg
)
;
}
.
security
-
state
-
local
{
background
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
globe
.
svg
)
;
}
.
requests
-
list
-
remoteip
{
width
:
9
%
;
}
.
requests
-
list
-
cause
{
width
:
9
%
;
}
.
requests
-
list
-
cause
-
stack
{
display
:
inline
-
block
;
background
-
color
:
var
(
-
-
theme
-
body
-
color
-
alt
)
;
color
:
var
(
-
-
theme
-
body
-
background
)
;
font
-
size
:
8px
;
font
-
weight
:
bold
;
line
-
height
:
10px
;
border
-
radius
:
3px
;
padding
:
0
2px
;
margin
:
0
;
margin
-
inline
-
end
:
3px
;
}
.
requests
-
list
-
type
{
width
:
6
%
;
}
.
requests
-
list
-
transferred
{
width
:
9
%
;
}
.
requests
-
list
-
size
{
width
:
7
%
;
}
.
theme
-
firebug
.
requests
-
list
-
size
{
justify
-
content
:
end
;
padding
-
inline
-
end
:
4px
;
}
.
requests
-
list
-
waterfall
{
width
:
20vw
;
max
-
width
:
20vw
;
min
-
width
:
20vw
;
background
-
repeat
:
repeat
-
y
;
background
-
position
:
left
center
;
background
-
image
:
-
moz
-
element
(
#
waterfall
-
background
)
;
}
.
requests
-
list
-
waterfall
:
dir
(
rtl
)
{
background
-
position
:
right
center
;
}
.
requests
-
list
-
waterfall
>
.
requests
-
list
-
header
-
button
{
padding
-
inline
-
start
:
0
;
}
.
requests
-
list
-
waterfall
>
.
requests
-
list
-
header
-
button
>
.
button
-
text
{
width
:
auto
;
}
.
requests
-
list
-
waterfall
-
label
-
wrapper
:
not
(
.
requests
-
list
-
waterfall
-
visible
)
{
padding
-
inline
-
start
:
16px
;
}
.
requests
-
list
-
timings
-
division
{
display
:
inline
-
block
;
padding
-
inline
-
start
:
4px
;
font
-
size
:
75
%
;
pointer
-
events
:
none
;
text
-
align
:
start
;
}
:
root
[
platform
=
"
win
"
]
.
requests
-
list
-
timings
-
division
{
padding
-
top
:
1px
;
font
-
size
:
90
%
;
}
.
requests
-
list
-
timings
-
division
:
not
(
:
first
-
child
)
{
border
-
inline
-
start
:
1px
dashed
;
}
.
requests
-
list
-
timings
-
division
:
dir
(
ltr
)
{
transform
-
origin
:
left
center
;
}
.
requests
-
list
-
timings
-
division
:
dir
(
rtl
)
{
transform
-
origin
:
right
center
;
}
.
theme
-
dark
.
requests
-
list
-
timings
-
division
{
border
-
inline
-
start
-
color
:
#
5a6169
!
important
;
}
.
theme
-
light
.
requests
-
list
-
timings
-
division
{
border
-
inline
-
start
-
color
:
#
585959
!
important
;
}
.
requests
-
list
-
timings
-
division
[
data
-
division
-
scale
=
second
]
.
requests
-
list
-
timings
-
division
[
data
-
division
-
scale
=
minute
]
{
font
-
weight
:
600
;
}
.
requests
-
list
-
timings
{
display
:
flex
;
flex
:
none
;
align
-
items
:
center
;
transform
:
scaleX
(
var
(
-
-
timings
-
scale
)
)
;
}
.
requests
-
list
-
timings
:
dir
(
ltr
)
{
transform
-
origin
:
left
center
;
}
.
requests
-
list
-
timings
:
dir
(
rtl
)
{
transform
-
origin
:
right
center
;
}
.
requests
-
list
-
timings
-
box
{
display
:
inline
-
block
;
height
:
9px
;
}
.
theme
-
firebug
.
requests
-
list
-
timings
-
box
{
background
-
image
:
linear
-
gradient
(
rgba
(
255
255
255
0
.
3
)
rgba
(
0
0
0
0
.
2
)
)
;
height
:
16px
;
}
.
requests
-
list
-
timings
-
box
.
blocked
{
background
-
color
:
var
(
-
-
timing
-
blocked
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
dns
{
background
-
color
:
var
(
-
-
timing
-
dns
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
connect
{
background
-
color
:
var
(
-
-
timing
-
connect
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
send
{
background
-
color
:
var
(
-
-
timing
-
send
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
wait
{
background
-
color
:
var
(
-
-
timing
-
wait
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
receive
{
background
-
color
:
var
(
-
-
timing
-
receive
-
color
)
;
}
.
requests
-
list
-
timings
-
total
{
display
:
inline
-
block
;
padding
-
inline
-
start
:
4px
;
font
-
size
:
85
%
;
font
-
weight
:
600
;
white
-
space
:
nowrap
;
transform
:
scaleX
(
var
(
-
-
timings
-
rev
-
scale
)
)
;
}
.
requests
-
list
-
timings
-
total
:
dir
(
ltr
)
{
transform
-
origin
:
left
center
;
}
.
requests
-
list
-
timings
-
total
:
dir
(
rtl
)
{
transform
-
origin
:
right
center
;
}
.
request
-
list
-
item
{
display
:
table
-
row
;
height
:
24px
;
}
.
request
-
list
-
item
.
selected
{
background
-
color
:
var
(
-
-
theme
-
selection
-
background
)
;
color
:
var
(
-
-
theme
-
selection
-
color
)
;
}
.
request
-
list
-
item
:
not
(
.
selected
)
.
odd
{
background
-
color
:
var
(
-
-
table
-
zebra
-
background
)
;
}
.
request
-
list
-
item
:
not
(
.
selected
)
:
hover
{
background
-
color
:
var
(
-
-
theme
-
selection
-
background
-
semitransparent
)
;
}
.
request
-
list
-
item
.
fromCache
>
.
requests
-
list
-
column
:
not
(
.
requests
-
list
-
waterfall
)
{
opacity
:
0
.
6
;
}
.
theme
-
firebug
.
request
-
list
-
item
:
not
(
.
selected
)
:
hover
{
background
:
#
EFEFEF
;
}
.
network
-
details
-
panel
-
toggle
[
disabled
]
{
display
:
none
;
}
.
network
-
details
-
panel
-
toggle
:
dir
(
ltr
)
:
:
before
.
network
-
details
-
panel
-
toggle
.
pane
-
collapsed
:
dir
(
rtl
)
:
:
before
{
background
-
image
:
var
(
-
-
theme
-
pane
-
collapse
-
image
)
;
}
.
network
-
details
-
panel
-
toggle
.
pane
-
collapsed
:
dir
(
ltr
)
:
:
before
.
network
-
details
-
panel
-
toggle
:
dir
(
rtl
)
:
:
before
{
background
-
image
:
var
(
-
-
theme
-
pane
-
expand
-
image
)
;
}
.
network
-
details
-
panel
{
width
:
100
%
;
height
:
100
%
;
overflow
:
hidden
;
}
.
panel
-
container
{
height
:
100
%
;
}
.
panel
-
container
.
properties
-
view
{
display
:
flex
;
flex
-
direction
:
column
;
overflow
-
x
:
hidden
;
overflow
-
y
:
auto
;
}
.
properties
-
view
{
flex
-
grow
:
1
;
}
.
properties
-
view
.
searchbox
-
section
{
flex
:
0
1
auto
;
}
/* ... */

